doc: add readme performance section. format.